Add Flyway configuration to application.conf
Updated application.conf with Flyway configurations for database migrations.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,3 +18,11 @@ akka {
     }
   }
 }
+
+
+flyway {
+  url = "jdbc:postgresql://localhost:5432/task_management_service"
+  user = "buddy"
+  password = "buddy"
+  locations = ["filesystem:./flyway/migrations"]
+}
