--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,11 +2,12 @@ slick.dbs.default {
   profile = "slick.jdbc.PostgresProfile$"
   db {
     driver = "org.postgresql.Driver"
-    url = "jdbc:postgresql://localhost:5432/task_management_service"
-    user = "buddy"
-    password = "buddy"
+    url = "jdbc:postgresql://localhost:5432/postgres"
+    user = "postgres"
+    password = "Shubhang@09"
     connectionPool = "HikariCP"
     keepAliveConnection = true
+    default.schema = "public"
   }
 }
 
@@ -21,8 +22,8 @@ akka {
 
 
 flyway {
-  url = "jdbc:postgresql://localhost:5432/task_management_service"
-  user = "buddy"
-  password = "buddy"
+  url = "jdbc:postgresql://localhost:5432/postgres"
+  user = "postgres"
+  password = "Shubhang@09"
   locations = ["filesystem:./flyway/migrations"]
 }
